added inngest and added creation and update function

--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "@neondatabase/serverless": "^1.0.2",
+    "@prisma/adapter-neon": "^7.2.0",
+    "@prisma/client": "6.19.1",
     "@reduxjs/toolkit": "^2.11.2",
     "date-fns": "^4.1.0",
+    "inngest": "^3.48.1",
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
+    "prisma": "6.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/ws": "^8.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.9",
     "tailwindcss": "^4"
