--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,8 @@
 onlyBuiltDependencies:
   - '@clerk/shared'
+  - '@prisma/client'
+  - '@prisma/engines'
+  - prisma
+  - protobufjs
   - sharp
   - unrs-resolver
