store post data api complete!

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "6.19.1",
     "@reduxjs/toolkit": "^2.11.2",
     "date-fns": "^4.1.0",
+    "imagekit": "^6.0.0",
     "inngest": "^3.48.1",
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
