--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/adapter-neon": "^7.2.0",
     "@prisma/client": "6.19.1",
     "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "imagekit": "^6.0.0",
     "inngest": "^3.48.1",
