--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^16.1.1",
     "@tailwindcss/postcss": "^4",
     "@types/ws": "^8.18.1",
-    "eslint": "^9",
+    "eslint": "8.57.0",
     "eslint-config-next": "15.5.9",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "tailwindcss": "^4"
   }
 }
