--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.6.0",
+    "stripe": "^20.1.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
